# python-project-52

./: .env  .pre-commit-config.yaml  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  ruff.toml
task_manager/: forms.py  mixins.py  settings.py  urls.py  validators.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_remove_status_author.py  0003_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_assigned_to.py  0002_alter_task_description_alter_task_executor_and_more.py  0003_task_labels.py  0005_remove_task_labels.py  0006_labeltask_task_labels.py  0007_rename_assigned_to_task_executor.py  0008_alter_task_author_alter_task_executor.py  0009_alter_task_description.py  0010_alter_task_labels.py
task_manager/templates/: form.html  index.html  layout.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  create_form.html  delete.html  (+2 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+3 files in other folders)
